--- a/view/service_history_lines_tree_sequence.xml
+++ b/view/service_history_lines_tree_sequence.xml
@@ -5,4 +5,5 @@ this repository contains the full copyright notices and license terms. -->
     <field name="service"/>
     <field name="date"/>
     <field name="description"/>
+    <field name="user"/>
 </tree>
